--- a/index.html
+++ b/index.html
@@ -343,20 +343,18 @@
         <div class="row mx-0">
             <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
                 <div>
-                    <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Technology</div>
+                    <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Tutorials</div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/blog/macbook.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2">New Macbook Pro with M2 Chip</a> <a href="single.html" class="fh5co_mini_time py-3">Tech News -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur">It is the higher-end lineup in the MacBook family, sitting above the consumer-focused MacBook Air. It is currently sold with 13-inch, 14-inch, and 16-inch screens, all using Apple silicon M-series chips.
-                        </div>
+                        <a href="single.html" class="fh5co_magna py-2">C++ Programming</a> <a href="single.html" class="fh5co_mini_time py-3">April 18,2016 </a>
+                        <div class="fh5co_consectetur">Understanding C++</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -367,9 +365,9 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">Lastpass users under cyber attack. </a> <a href="#" class="fh5co_mini_time py-3">Tech News -
+                        <a href="single.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">
                         Feb 18,2023 </a>
-                        <div class="fh5co_consectetur">LastPass is a popular password manager that allows users to securely store and manage their passwords across multiple devices and platforms.</div>
+                        <div class="fh5co_consectetur">Learn Python</div>
                     </div>
                 </div>
                 <div class="row pb-4">
