--- a/index.html
+++ b/index.html
@@ -353,20 +353,19 @@
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2">C++ Programming</a> <a href="single.html" class="fh5co_mini_time py-3">April 18,2016 </a>
+                        <a href="cpp-programming.html" class="fh5co_magna py-2">C++ Programming</a> <a href="cpp-programming.html" class="fh5co_mini_time py-3">April 14,2023 </a>
                         <div class="fh5co_consectetur">Understanding C++</div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/news/lock.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/python/learn-python.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">
-                        Feb 18,2023 </a>
+                        <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">Feb 28,2023 </a>
                         <div class="fh5co_consectetur">Learn Python</div>
                     </div>
                 </div>
@@ -380,23 +379,21 @@
                         </div>
                     </div> 
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">Hackers using trojanized MacOS to deploy...</a> <a href="#" class="fh5co_mini_time py-3">Tech News -
-                        jan 18,2023 </a>
-                        <div class="fh5co_consectetur">macOS cyber attacks have become increasingly prevalent in recent years. macOS, the operating system used by Apple's Mac computers, has traditionally been considered more secure than other operating systems, such as Windows.</div>
+                        <a href="single.html" class="fh5co_magna py-2">C Programming</a> <a href="#" class="fh5co_mini_time py-3"> Jan 18,2023 </a>
+                        <div class="fh5co_consectetur">C in Depth</div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/news/bmw-m5.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">BMW M5 Spec, Price, Onroad price and more</a> <a href="#" class="fh5co_mini_time py-3">Tech News -
+                        <a href="single.html" class="fh5co_magna py-2">Java</a> <a href="#" class="fh5co_mini_time py-3">Tech News -
                         Feb 18,2023 </a>
-                        <div class="fh5co_consectetur">The BMW M5 is a high-performance sedan that is part of BMW's M series lineup. The M5 is known for its powerful engine, athletic handling, and luxurious interior.
-                        </div>
+                        <div class="fh5co_consectetur">Java in Depth</div>
                     </div>
                 </div>
             </div>
@@ -420,7 +417,7 @@
                     <a href="#" class="fh5co_tagg">Cloud</a>
                 </div>
                 <div>
-                    <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
+                    <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Tech Updates</div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
@@ -521,7 +518,7 @@
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
-                <div class="footer_main_title py-3"> Most Viewed Posts</div>
+                <div class="footer_main_title py-3">Tech News</div>
                 <div class="footer_makes_sub_font">Jan 31, 2023</div>
                 <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
                 <div class="footer_makes_sub_font"> Feb 23, 2023</div>
