--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">Feb 28,2023 </a>
+                        <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">Feb 28,2023</a>
                         <div class="fh5co_consectetur">Learn Python</div>
                     </div>
                 </div>
@@ -373,20 +373,19 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/news/macos.jpg" alt=""/>
+                                <img src="images/programmingLanguages/c/C Programming.png" alt=""/>
                             </div>
                             <div></div>
                         </div>
                     </div> 
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">C Programming</a> <a href="#" class="fh5co_mini_time py-3"> Jan 18,2023 </a>
+                        <a href="single.html" class="fh5co_magna py-2">C Programming</a> <a href="#" class="fh5co_mini_time py-3">Jan 18,2023</a>
                         <div class="fh5co_consectetur">C in Depth</div>
                     </div>
                 </div>
-                <div class="row pb-4">
-                    <div class="col-md-5">
+                <div class="row pb-4">                    <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/programmingLanguages/" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/java/Java_0.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -425,7 +424,7 @@
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">BugBounty</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
@@ -443,7 +442,7 @@
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Iphone Security</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
@@ -451,7 +450,7 @@
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Ransomware</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
                     </div>
                 </div>
             </div>
@@ -496,36 +495,36 @@
             <div class="col-12 col-md-3 col-lg-2">
                 <div class="footer_main_title py-3">Who We Are</div>
                 <ul class="footer_menu">
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Business</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; About Us</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Careers</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Terms of use</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Privacy Policy</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Copy Right</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Technology</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Events</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Business</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;About Us</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Careers</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Terms of use</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Privacy Policy</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Copy Right</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Technology</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Events</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
                 <div class="footer_main_title py-3">New Updates</div>
                 <div class="footer_makes_sub_font">Jan 31, 2023</div>
                 <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
-                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <div class="footer_makes_sub_font">Feb 23, 2023</div>
                 <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
-                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <div class="footer_makes_sub_font">Jan 28, 2023</div>
                 <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
-                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <div class="footer_makes_sub_font">Dec 31, 2022</div>
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3">Tech News</div>
                 <div class="footer_makes_sub_font">Jan 31, 2023</div>
                 <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
-                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <div class="footer_makes_sub_font">Feb 23, 2023</div>
                 <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
-                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <div class="footer_makes_sub_font">Jan 28, 2023</div>
                 <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
-                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <div class="footer_makes_sub_font">Dec 31, 2022</div>
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
@@ -534,7 +533,7 @@
 <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
         <div class="row  ">
-            <div class="col-12 col-md-6 py-4 Reserved"> © Copyright 2023, All rights reserved.<a href="https://iamdreamer.co.in" title="Free HTML5 Bootstrap templates"> IamDreamer.co.in</a></div>
+            <div class="col-12 col-md-6 py-4 Reserved"> © Copyright 2023, All rights reserved.<a href="https://iamdreamer.co.in" title="Free HTML5 Bootstrap templates">IamDreamer.co.in</a></div>
             <div class="col-12 col-md-6 spdp_right py-4">
                 <a href="Contact_us.html" class="footer_last_part_menu">About</a>
                 <a href="Contact_us.html" class="footer_last_part_menu">Contact</a>
