--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div class="container-fluid paddding mb-5">
     <div class="row mx-0">
         <div class="col-md-6 col-12 paddding animate-box" data-animate-effect="fadeIn">
-            <div class="fh5co_suceefh5co_height"><img src="images/programmingLanguages/python/learn-python.jpg" alt="img"/>
+            <div class="fh5co_suceefh5co_height"><img src="images/programmingLanguages/python/Python.png" alt="img"/>
                 <div class="fh5co_suceefh5co_height_position_absolute"></div>
                 <div class="fh5co_suceefh5co_height_position_absolute_font">
                     <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb 23,2023
@@ -360,7 +360,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/programmingLanguages/python/learn-python.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
