--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     </div>
                 </div>
                 <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/news/Ransomware.png" alt="img"
+                    <div class="col-5 align-self-center"><img src="images/tech-news/Ransomware.png" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Ransomware</div>
