--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="fh5co_suceefh5co_height_position_absolute_font">
                     <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb 23,2023
                     </a></div>
-                    <div class=""><a href="single.html" class="fh5co_good_font">Learn Python Step by Step</a></div>
+                    <div class=""><a href="learn-python.html" class="fh5co_good_font">Learn Python Step by Step</a></div>
                 </div>
             </div>
         </div>
