--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Jan
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">How to hack WiFi using Aircrack-ng</a></div>
+                            <div class=""><a href="https://youtu.be/pZ9Nv8wsUYc" class="fh5co_good_font_2">How to hack WiFi using Aircrack-ng</a></div>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb 24,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">How hack WiFi using Fern WiFi Cracker</a></div>
+                            <div class=""><a href="https://youtu.be/eRSMlS-OU_Y" class="fh5co_good_font_2">How hack WiFi using Fern WiFi Cracker</a></div>
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">How to hack WiFi using Wifite</a></div>
+                            <div class=""><a href="https://youtu.be/0jE_XGOiyAU" class="fh5co_good_font_2">How to hack WiFi using Wifite</a></div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Jan
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">Protect Password File by Encrypted</a></div>
+                            <div class=""><a href="https://youtu.be/19UYcE-iRcg" class="fh5co_good_font_2">Protect Password File by Encrypted</a></div>
                         </div>
                     </div>
                 </div>
