--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                                            class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">Is OpenAI taking over our jobs?</a>
+                        <a href="open-ai-chatgpt.html" class="text-white">Is OpenAI taking over our jobs?</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                     <div class="fh5co_latest_trading_img"><img src="images/blog/Ransomware.png" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">Ransomware Attacks: What You Need to Know</a>
+                        <a href="Ransomware-Attacks.html" class="text-white">Ransomware Attacks: What You Need to Know</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <div class="fh5co_latest_trading_img"><img src="images/blog/iphone-security.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">Iphone Security mesures</a>
+                        <a href="iphone-security.html" class="text-white">Iphone Security mesures</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                     <div class="fh5co_latest_trading_img"><img src="images/blog/best-programming-language-in-2023.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">Best Programming Languages Worth Learning: A Comprehensive Guide</a>
+                        <a href="Best-Programming-Languages-Worth-Learning.html" class="text-white">Best Programming Languages Worth Learning: A Comprehensive Guide</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                     <div class="fh5co_latest_trading_img"><img src="images/blog/spacex.jpg" alt="" class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">SpaceX Starlink: Revolutionizing Satellite Internet</a>
+                        <a href="SpaceX-Starlink.html" class="text-white">SpaceX Starlink: Revolutionizing Satellite Internet</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Wifite tools in Kali Linux</span></a>
+                            <a href="https://youtu.be/0jE_XGOiyAU" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Wifite tools in Kali Linux</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Bug Bounty Plesk-cve-2023-24044</span></a>
+                            <a href="https://youtu.be/-cqIFUUtU8s" class="d-block fh5co_small_post_heading"><span class="">Bug Bounty Plesk-cve-2023-24044</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Encrypted Accounts & Passwords</span></a>
+                            <a href="https://youtu.be/19UYcE-iRcg" class="d-block fh5co_small_post_heading"><span class="">Encrypted Accounts & Passwords</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                             </div>
                         </div>
                         <div>
-                            <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
+                            <a href="https://youtu.be/pZ9Nv8wsUYc" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
