--- a/education.html
+++ b/education.html
@@ -90,19 +90,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">CyberDocs<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">UnboxOverflow<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">4x4Trek<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="single.html">Free BootCamp<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -120,73 +120,58 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/nathan-mcbride-229637.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/c/C Programming.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="single.html" class="fh5co_magna py-2">Learn C Programming</a> <a href="#" class="fh5co_mini_time py-3"> Education -
+                        April 18,2023</a>
+                        <div class="fh5co_consectetur">C is a general-purpose, procedural programming language that widely used for developing operating systems, embedded systems, system software, and various application software. One of the strengths of C is its low-level control of system resources, such as memory and input/output operations, making it a popular choice for developing operating systems and device drivers. C is also a small language, with a relatively simple syntax, making it easy to learn for beginners.
                         </div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                            dolore.
+                        <a href="single.html" class="fh5co_magna py-2">Learn C++</a> <a href="#" class="fh5co_mini_time py-3"> Education -
+                        April 18,2023</a>
+                        <div class="fh5co_consectetur">C++ is a high-level, general-purpose programming language that widely used for developing software applications, games, operating systems, and device drivers. C++ is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism. It is known for its efficiency, performance, and flexibility, and is a popular choice for building complex software systems.
                         </div>
-                        <ul class="fh5co_gaming_topikk pt-3">
-                            <li> Why 2017 Might Just Be the Worst Year Ever for Gaming</li>
-                            <li> Ghost Racer Wants to Be the Most Ambitious Car Game</li>
-                            <li> New Nintendo Wii Console Goes on Sale in Strategy Reboot</li>
-                            <li> You and Your Kids can Enjoy this News Gaming Console</li>
-                        </ul>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
+                                <img src="images/programmingLanguages/java/Java.png" alt=""/>
                             </div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo
-                            consequat.
+                        <a href="single.html" class="fh5co_magna py-2">Learn Java</a> <a href="#" class="fh5co_mini_time py-3"> Education -
+                        April 18,2023</a>
+                        <div class="fh5co_consectetur">Java is a high-level, general-purpose programming language widely used for developing mobile applications, web applications, desktop applications, games, and enterprise software. Java is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism.
                         </div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/office-768x512.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/cyberdocs/CyberSec.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
+                        <a href="single.html" class="fh5co_magna py-2">Learn cybersecurity </a> <a href="#" class="fh5co_mini_time py-3"> Education -
                         April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <div class="fh5co_consectetur">Cybersecurity refers to the practice of protecting computer systems, networks, devices, and data from theft, damage, or unauthorized access. With the increasing reliance on technology in our daily lives, cybersecurity has become a critical concern for individuals, businesses, and governments around the world.
                         </div>
                     </div>
                 </div>
@@ -197,18 +182,18 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="fh5co_tags_all">
-                    <a href="#" class="fh5co_tagg">Business</a>
+                    <a href="#" class="fh5co_tagg">AI</a>
                     <a href="#" class="fh5co_tagg">Technology</a>
-                    <a href="#" class="fh5co_tagg">Sport</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
-                    <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
-                    <a href="#" class="fh5co_tagg">Photography</a>
-                    <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">ML</a>
+                    <a href="#" class="fh5co_tagg">Hacking</a>
+                    <a href="#" class="fh5co_tagg">Linux</a>
+                    <a href="#" class="fh5co_tagg">Cloud</a>
+                    <a href="#" class="fh5co_tagg">Block Chain</a>
+                    <a href="#" class="fh5co_tagg">Cybersecurity</a>
+                    <a href="#" class="fh5co_tagg">programming Languages</a>
                     <a href="#" class="fh5co_tagg">Education</a>
                     <a href="#" class="fh5co_tagg">Social</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
+                    <a href="#" class="fh5co_tagg">Malware</a>
                 </div>
                 <div>
                     <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
@@ -250,14 +235,14 @@
                 </div>
             </div>
         </div>
-        <div class="row mx-0">
+        <div class="row mx-0 animate-box" data-animate-effect="fadeInUp">
             <div class="col-12 text-center pb-4 pt-4">
-                <a href="#" class="btn_mange_pagging"><i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+                <a href="#" class="btn_mange_pagging">Previous</a>
                 <a href="#" class="btn_pagging">1</a>
                 <a href="#" class="btn_pagging">2</a>
                 <a href="#" class="btn_pagging">3</a>
                 <a href="#" class="btn_pagging">...</a>
-                <a href="#" class="btn_mange_pagging">Next <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+                <a href="#" class="btn_mange_pagging">Next</a>
              </div>
         </div>
     </div>
@@ -270,37 +255,37 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Fern WiFi Cracker</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Oops.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">Understanding Methods in Python: A Fundamental Aspect of Object-Oriented Programming</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">Linear Regression in Machine Learning</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">Understanding Pointers in C++</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -359,31 +344,15 @@
               <!--  <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div> -->
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
-                <div class="footer_main_title py-3"> Most Viewed Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download (2).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/ryan-moreno-98837.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-            </div>
-        </div>
-        <div class="row justify-content-center pt-2 pb-4">
-            <div class="col-12 col-md-8 col-lg-7 ">
-                <div class="input-group">
-                    <span class="input-group-addon fh5co_footer_text_box" id="basic-addon1"><i class="fa fa-envelope"></i></span>
-                    <input type="text" class="form-control fh5co_footer_text_box" placeholder="Enter your email..." aria-describedby="basic-addon1">
-                    <a href="#" class="input-group-addon fh5co_footer_subcribe" id="basic-addon12"> <i class="fa fa-paper-plane-o"></i>&nbsp;&nbsp;Subscribe</a>
-                </div>
+                <div class="footer_main_title py-3">Tech News</div>
+                <div class="footer_makes_sub_font">Jan 31, 2023</div>
+                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
+                <div class="footer_makes_sub_font">Feb 23, 2023</div>
+                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <div class="footer_makes_sub_font">Jan 28, 2023</div>
+                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
+                <div class="footer_makes_sub_font">Dec 31, 2022</div>
+                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
     </div>
