--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cyberdocs.html">Education<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="unboxoverflow.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="travel4x4trek.html">Free BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Free BootCamp<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
@@ -354,7 +354,7 @@
                     </div>
                     <div class="col-md-7 animate-box">
                         <a href="cpp-programming.html" class="fh5co_magna py-2">C++ Programming</a> <a href="cpp-programming.html" class="fh5co_mini_time py-3">April 14,2023 </a>
-                        <div class="fh5co_consectetur">Understanding C++</div>
+                        <div class="fh5co_consectetur">Understanding C++ - C++ is a high-level, general-purpose programming language that widely used for developing software applications, games, operating systems, and device drivers. C++ is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism. It is known for its efficiency, performance, and flexibility, and is a popular choice for building complex software systems.</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -366,7 +366,7 @@
                     </div>
                     <div class="col-md-7">
                         <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">Feb 28,2023</a>
-                        <div class="fh5co_consectetur">Learn Python</div>
+                        <div class="fh5co_consectetur">Learn Python - Python is a high-level, interpreted programming language that was first released in 1991. It is a general-purpose language that is widely used for web development, data science, machine learning, scientific computing, and many other applications. One of the key features of Python is its simplicity and ease of use. The language has a clean syntax and uses indentation to indicate code blocks, making it easy to read and write. Python also has a large standard library that provides many useful modules and functions for common tasks.</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -380,7 +380,7 @@
                     </div> 
                     <div class="col-md-7">
                         <a href="single.html" class="fh5co_magna py-2">C Programming</a> <a href="#" class="fh5co_mini_time py-3">Jan 18,2023</a>
-                        <div class="fh5co_consectetur">C in Depth</div>
+                        <div class="fh5co_consectetur">C in Depth - C is a general-purpose, procedural programming language that widely used for developing operating systems, embedded systems, system software, and various application software. One of the strengths of C is its low-level control of system resources, such as memory and input/output operations, making it a popular choice for developing operating systems and device drivers. C is also a small language, with a relatively simple syntax, making it easy to learn for beginners.</div>
                     </div>
                 </div>
                 <div class="row pb-4">                    <div class="col-md-5">
@@ -392,7 +392,7 @@
                     <div class="col-md-7">
                         <a href="single.html" class="fh5co_magna py-2">Java</a> <a href="#" class="fh5co_mini_time py-3">Tech News -
                         Feb 18,2023 </a>
-                        <div class="fh5co_consectetur">Java in Depth</div>
+                        <div class="fh5co_consectetur">Java in Depth - Java is a high-level, general-purpose programming language widely used for developing mobile applications, web applications, desktop applications, games, and enterprise software. Java is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism.</div>
                     </div>
                 </div>
             </div>
