--- a/gadgets.html
+++ b/gadgets.html
@@ -42,16 +42,12 @@
 <div class="container-fluid">
     <div class="container">
         <div class="row">
-            <!--check and edit the link-->
             <div class="col-12 col-md-3 fh5co_padding_menu">
               <a href="iamdreamer.co.in">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
             <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-                <!--<div class="text-center d-inline-block">
-                    <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
-                </div>-->
                 <div class="text-center d-inline-block">
                     <a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
                 </div>
@@ -69,6 +65,9 @@
                 </div>
                 <div class="text-center d-inline-block">
                     <a href="https://www.facebook.com/IamDreamerOfficial/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
+                </div>
+                <div class="text-center d-inline-block">
+                    <a href="https://www.reddit.com/user/iamdreamer_" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-reddit"></i></div></a>
                 </div>
                 <div class="clearfix">
                     
@@ -90,19 +89,19 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="black/black/index.html">CyberDocs<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">UnboxOverflow<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="single.html">4x4Trek<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle</a><span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Shop<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="Contact_us.html">Resources<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="resources.html">Resources<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -199,53 +198,53 @@
                 <div class="fh5co_tags_all">
                     <a href="#" class="fh5co_tagg">Business</a>
                     <a href="#" class="fh5co_tagg">Technology</a>
-                    <a href="#" class="fh5co_tagg">Sport</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">Hacking</a>
+                    <a href="#" class="fh5co_tagg">AI-ML</a>
                     <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
+                    <a href="#" class="fh5co_tagg">Gadgets</a>
                     <a href="#" class="fh5co_tagg">Photography</a>
-                    <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">Blockchain</a>
+                    <a href="#" class="fh5co_tagg">Cyber Attacks</a>
                     <a href="#" class="fh5co_tagg">Education</a>
-                    <a href="#" class="fh5co_tagg">Social</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
+                    <a href="#" class="fh5co_tagg">GPT</a>
+                    <a href="#" class="fh5co_tagg">Cloud</a>
                 </div>
                 <div>
-                    <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
+                    <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Tech Updates</div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (1).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                    </div>
-                </div>
-                <div class="row pb-3">
-                    <div class="col-5 align-self-center">
-                        <img src="images/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
-                    </div>
-                    <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font">BugBounty</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
                     </div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (2).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font">Blockchain</div>
+                        <div class="most_fh5co_treding_font_123"> April 18, 2023</div>
                     </div>
                 </div>
                 <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
+                    <div class="col-5 align-self-center">
+                        <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
+                    </div>
+                    <div class="col-7 paddding">
+                        <div class="most_fh5co_treding_font">Iphone Security</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
+                    </div>
+                </div>
+                <div class="row pb-3">
+                    <div class="col-5 align-self-center"><img src="images/tech-news/Ransomware.png" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font">Ransomware</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
                     </div>
                 </div>
             </div>
@@ -315,8 +314,7 @@
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
                 <div class="footer_sub_about pb-3">
-
-                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments. Thank you for choosing our company as your technology partner. We look forward to working with you and helping you achieve your goals.
+                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table_footer">
@@ -359,22 +357,15 @@
               <!--  <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div> -->
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
-                <div class="footer_main_title py-3"> Most Viewed Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download (2).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/ryan-moreno-98837.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
+                <div class="footer_main_title py-3">Tech News</div>
+                <div class="footer_makes_sub_font">Jan 31, 2023</div>
+                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
+                <div class="footer_makes_sub_font">Feb 23, 2023</div>
+                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <div class="footer_makes_sub_font">Jan 28, 2023</div>
+                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
+                <div class="footer_makes_sub_font">Dec 31, 2022</div>
+                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
         <div class="row justify-content-center pt-2 pb-4">
