--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
                     <a href="https://www.facebook.com/IamDreamerOfficial/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
                 </div>
                 <div class="text-center d-inline-block">
-                    <a href="https://www.facebook.com/IamDreamerOfficial/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-reddit"></i></div></a>
+                    <a href="https://www.reddit.com/user/iamdreamer_" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-reddit"></i></div></a>
                 </div>
-                <div class="clearfix">
-
-                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
@@ -87,10 +85,10 @@
                         <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="unboxoverflow.html">Lifestyle<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="lifestyle.html">Free BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
@@ -404,15 +402,15 @@
                 <div class="fh5co_tags_all">
                     <a href="#" class="fh5co_tagg">Business</a>
                     <a href="#" class="fh5co_tagg">Technology</a>
-                    <a href="#" class="fh5co_tagg">Sport</a>
-                    <a href="#" class="fh5co_tagg">AI</a>
+                    <a href="#" class="fh5co_tagg">Hacking</a>
+                    <a href="#" class="fh5co_tagg">AI-ML</a>
                     <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Apple</a>
+                    <a href="#" class="fh5co_tagg">Gadgets</a>
                     <a href="#" class="fh5co_tagg">Photography</a>
                     <a href="#" class="fh5co_tagg">Blockchain</a>
                     <a href="#" class="fh5co_tagg">Cyber Attacks</a>
                     <a href="#" class="fh5co_tagg">Education</a>
-                    <a href="#" class="fh5co_tagg">Social</a>
+                    <a href="#" class="fh5co_tagg">GPT</a>
                     <a href="#" class="fh5co_tagg">Cloud</a>
                 </div>
                 <div>
@@ -424,7 +422,7 @@
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">BugBounty</div>
-                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
                     </div>
                 </div>
                 <div class="row pb-3">
@@ -433,7 +431,7 @@
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Blockchain</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123"> April 18, 2023</div>
                     </div>
                 </div>
                 <div class="row pb-3">
@@ -442,7 +440,7 @@
                     </div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Iphone Security</div>
-                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
                     </div>
                 </div>
                 <div class="row pb-3">
@@ -450,7 +448,7 @@
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Ransomware</div>
-                        <div class="most_fh5co_treding_font_123">April 18, 2016</div>
+                        <div class="most_fh5co_treding_font_123">April 18, 2023</div>
                     </div>
                 </div>
             </div>
