--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="#" class="fh5co_mini_time py-3">Feb 28,2023</a>
+                        <a href="python-programming.html" class="fh5co_magna py-2">Python Programming</a> <a href="python-programming.html" class="fh5co_mini_time py-3">Feb 28,2023</a>
                         <div class="fh5co_consectetur">Learn Python - Python is a high-level, interpreted programming language that was first released in 1991. It is a general-purpose language that is widely used for web development, data science, machine learning, scientific computing, and many other applications. One of the key features of Python is its simplicity and ease of use. The language has a clean syntax and uses indentation to indicate code blocks, making it easy to read and write. Python also has a large standard library that provides many useful modules and functions for common tasks.</div>
                     </div>
                 </div>
@@ -377,7 +377,7 @@
                         </div>
                     </div> 
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">C Programming</a> <a href="#" class="fh5co_mini_time py-3">Jan 18,2023</a>
+                        <a href="c-programming.html" class="fh5co_magna py-2">C Programming</a> <a href="c-programming.html" class="fh5co_mini_time py-3">Jan 18,2023</a>
                         <div class="fh5co_consectetur">C in Depth - C is a general-purpose, procedural programming language that widely used for developing operating systems, embedded systems, system software, and various application software. One of the strengths of C is its low-level control of system resources, such as memory and input/output operations, making it a popular choice for developing operating systems and device drivers. C is also a small language, with a relatively simple syntax, making it easy to learn for beginners.</div>
                     </div>
                 </div>
@@ -388,7 +388,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">Java</a> <a href="#" class="fh5co_mini_time py-3">Tech News -
+                        <a href="java-programming.html" class="fh5co_magna py-2">Java</a> <a href="java-programming.html" class="fh5co_mini_time py-3">Tech News -
                         Feb 18,2023 </a>
                         <div class="fh5co_consectetur">Java in Depth - Java is a high-level, general-purpose programming language widely used for developing mobile applications, web applications, desktop applications, games, and enterprise software. Java is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism.</div>
                     </div>
