--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="java-programming.html" class="fh5co_magna py-2">Java</a> <a href="java-programming.html" class="fh5co_mini_time py-3">Tech News -
-                        Feb 18,2023 </a>
+                        <a href="java-programming.html" class="fh5co_magna py-2">Java</a> <a href="java-programming.html" class="fh5co_mini_time py-3">Feb 18,2023 </a>
                         <div class="fh5co_consectetur">Java in Depth - Java is a high-level, general-purpose programming language widely used for developing mobile applications, web applications, desktop applications, games, and enterprise software. Java is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism.</div>
                     </div>
                 </div>
