--- a/cyberdocs/index.html
+++ b/cyberdocs/index.html
@@ -201,7 +201,7 @@
 					<h3 class="section-title">Our Address</h3>
 					<ul class="contact-info">
 						<li><i class="icon-map-marker"></i>Bangalore</li>
-						<li><i class="icon-envelope"></i><a href="info@iamdreamer/cyberdocs.co.in">info@iamdreamer/cyberdocs.co.in</a></li>
+						<li><i class="icon-envelope"></i><a href="info@iamdreamer/cyberdocs.co.in">info@iamdreamer.co.in/cyberdocs</a></li>
 						<li><i class="icon-globe2"></i><a href="https://iamdreamer.co.in/cyberdocs">iamdreamer.co.in/cyberdocs</a></li>
 					</ul>
 					<h3 class="section-title">Connect with Us</h3>
