--- a/learn-python.html
+++ b/learn-python.html
@@ -157,26 +157,37 @@
                     <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
                 </div>
                 <div class="row pb-3">
+                    <div class="col-5 align-self-center">
+                        <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
+                    </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font"> BugBounty</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
+                    <div class="col-5 align-self-center">
+                        <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
+                    </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
+                        <div class="most_fh5co_treding_font">Blockchain</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
+                    <div class="col-5 align-self-center">
+                        <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
+                    </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Iphone Security</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
+                    <div class="col-5 align-self-center"><img src="images/blog/Ransomware.png" alt="img"
+                                                              class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Ransomware</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
