--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -141,54 +141,53 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <a href="#" class="fh5co_tagg">Business</a>
                     <a href="#" class="fh5co_tagg">Technology</a>
                     <a href="#" class="fh5co_tagg">Sport</a>
-                    <a href="#" class="fh5co_tagg">Art</a>
+                    <a href="#" class="fh5co_tagg">AI</a>
                     <a href="#" class="fh5co_tagg">Lifestyle</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
+                    <a href="#" class="fh5co_tagg">New</a>
                     <a href="#" class="fh5co_tagg">Photography</a>
                     <a href="#" class="fh5co_tagg">Lifestyle</a>
                     <a href="#" class="fh5co_tagg">Art</a>
                     <a href="#" class="fh5co_tagg">Education</a>
                     <a href="#" class="fh5co_tagg">Social</a>
-                    <a href="#" class="fh5co_tagg">Three</a>
-                </div>
-<div>
-                    <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
-                </div>
-                <div class="row pb-3">
-                    <div class="col-5 align-self-center">
-                        <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
+                    <a href="#" class="fh5co_tagg">ML</a>
+                    <div>
+                        <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
                     </div>
-                    <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> BugBounty</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                    <div class="row pb-3">
+                        <div class="col-5 align-self-center">
+                            <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
+                        </div>
+                        <div class="col-7 paddding">
+                            <div class="most_fh5co_treding_font"> BugBounty</div>
+                            <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        </div>
                     </div>
-                </div>
-                <div class="row pb-3">
-                    <div class="col-5 align-self-center">
-                        <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
+                    <div class="row pb-3">
+                        <div class="col-5 align-self-center">
+                            <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
+                        </div>
+                        <div class="col-7 paddding">
+                            <div class="most_fh5co_treding_font">Blockchain</div>
+                            <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        </div>
                     </div>
-                    <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font">Blockchain</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                    <div class="row pb-3">
+                        <div class="col-5 align-self-center">
+                            <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
+                        </div>
+                        <div class="col-7 paddding">
+                            <div class="most_fh5co_treding_font">Iphone Security</div>
+                            <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        </div>
                     </div>
-                </div>
-                <div class="row pb-3">
-                    <div class="col-5 align-self-center">
-                        <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
+                    <div class="row pb-3">
+                        <div class="col-5 align-self-center"><img src="images/blog/Ransomware.png" alt="img"
+                                                                  class="fh5co_most_trading"/></div>
+                        <div class="col-7 paddding">
+                            <div class="most_fh5co_treding_font">Ransomware</div>
+                            <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
+                        </div>
                     </div>
-                    <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font">Iphone Security</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                    </div>
-                </div>
-                <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
-                                                              class="fh5co_most_trading"/></div>
-                    <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font">Ransomware</div>
-                        <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -201,36 +200,37 @@ Overall, OpenAI is an important and influential organization in the field of AI 
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="Understanding-Pointers-in-C++.html" class="d-block fh5co_small_post_heading"><span class="">Pointers in C++</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Jan 16,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">Linear Regression in Machine learning</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 18,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <!--Update cyberDocs blog page-->
+                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 21,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">Method in python</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
@@ -288,18 +288,15 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
-                <div class="footer_main_title py-3">Most Viewed Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
+                <div class="footer_main_title py-3"> Most Viewed Posts</div>
+                <div class="footer_makes_sub_font">Jan 31, 2023</div>
+                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
+                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
         <div class="row justify-content-center pt-2 pb-4">
